# Predictive_Maintenance_ML

./: pyproject.toml
.github/workflows/: ci.yml
api/: app.py
data/: processed_data.csv  raw_data.csv
docs/: README.md  project_report.md
mlruns/0/: meta.yaml
mlruns/0/0a936726eda349aa954d45c5575e6ad1/: meta.yaml
mlruns/0/4457dce603174d399a49f81f61c99a82/: meta.yaml
mlruns/0/45d409214cfa4263866de60dbb4bc3ae/: meta.yaml
mlruns/0/496c46d94b0c42ee87aec27133510b3a/: meta.yaml
mlruns/0/496c46d94b0c42ee87aec27133510b3a/tags/: mlflow.source.git.commit
mlruns/0/531e2d9fc36f4237b82e4bc6dd86b2b1/: meta.yaml
mlruns/0/7c390c6c017e4ea7b3c3bf243f65a613/: meta.yaml
mlruns/0/bb922a28bdb9411eb7851262677b3c4f/: meta.yaml
mlruns/0/bd6a785d8afa460a8503558a01276d92/: meta.yaml
mlruns/0/e6b3a4c084c34458bb5aa37dc4864dc5/: meta.yaml
mlruns/0/f8136f04baa5412c96afee7b96182c7c/: meta.yaml
models/: __init__.py  model.pkl  neural_model.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  exploratory_data.ipynb  model_training.html  model_training.ipynb  model_training.py
notebooks/.ipynb_checkpoints/: exploratory_data-checkpoint.ipynb  model_training-checkpoint.ipynb
src/: data_preprocessing.py  model_evaluation.py  model_training.py
streamlit_app/: streamlit_app.py
tests/: test_model_training.py
