[tool.poetry]
name = "predictive_maintenance_ml"
version = "0.1.0"
description = "Proyecto de mantenimiento predictivo usando machine learning."
authors = ["Cristian MB cristianj3006@gmail.com"]
license = "MIT"
readme = "docs/README.md"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.0"
torch = { version = "2.2.1", extras = ["cpu"] }
# tensorflow = "^2.6.0"
flask = "^2.0.0"
gunicorn = "^20.1.0"
docker = "^5.0.0"
mlflow = "^1.20.0"
requests = "^2.26.0"
jupyter = "^1.0.0"
kagglehub = "^0.3.7"
xgboost = "^2.1.4"
matplotlib = "3.4.3"
seaborn = "0.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
black = "^21.0"
flake8 = "^3.9.0"
isort = "^5.9.0"
mypy = "^0.910"
pylint = "^2.10.0"
jupyterlab = "^3.0.0"

[tool.poetry.scripts]
train-model = "src.train_model:main"
start-api = "api.app:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

